# piledown

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
.github/workflows/: release.yml
assets/: logo.txt
crates/libpiledown/: Cargo.toml
crates/libpiledown/src/: structs.rs
crates/piledown/: Cargo.toml
crates/piledown/benches/: coverage.rs  pipeline.rs
crates/piledown/src/: cigar.rs  cli.rs  coverage.rs  engine.rs  filter.rs  junction.rs  lib.rs  main.rs  output.rs  region.rs  strand.rs  structs.rs  types.rs
crates/piledown/tests/: integration.rs
crates/piledownR/: .Rbuildignore  DESCRIPTION  NAMESPACE  configure.win
crates/piledownR/R/: extendr-wrappers.R  piledownR.R
crates/piledownR/man/: generate.Rd  junction_params.Rd  pile_params.Rd
crates/piledownR/src/: Makevars  Makevars.win  entrypoint.c
crates/piledownR/src/rust/: Cargo.toml
crates/piledownR/src/rust/src/: lib.rs
crates/piledownR/tests/: testthat.R
crates/piledownR/tests/testthat/: test-generate.R
crates/pldn/: Cargo.toml
crates/pldn/src/: cli.rs  main.rs
crates/pldn/tests/: cli.rs
crates/pyledown/: Cargo.toml
crates/pyledown/src/: lib.rs
examples/: simple.R  simple.py
piledown/: __init__.py
pkgs/: piledown-bin.nix  piledown-lib.nix  piledown-py.nix
pyledown/: __init__.py
src/: cli.rs  lib.rs  main.rs  structs.rs
tests/data/: SRR21778056-sorted-subsample.bam.bai  regions.bed  regions.parquet  regions.tsv
tests/golden/: README.md  chr1_14900-15200_isf_reverse.tsv  chr1_14900-15200_isr_either.tsv  chr1_14900-15200_isr_reverse.tsv  chr1_14900-15200_samtools_depth_all.tsv  chr1_17000-17500_isr_forward.tsv
tests/python/: conftest.py  test_pyledown.py
tests/setup/: align.sh  fetch.sh  makeTestBam.sh
