[workspace]
members = ["crates/pldn", "crates/piledown", "crates/pyledown"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.95"
arrow = { version = "54.0.0", features = ["pyarrow"] }
clap = { version = "4.5.26", features = ["derive"]}
csv = "1.3.1"
fnv = "1.0.7"
futures = "0.3.31"
indexmap = { version = "2.7.1", features = ["serde"] }
noodles = { version = "0.87.0", features = ["core", "sam", "bam"] }
parquet = "54.0.0"
pyo3 = { version = "0.23.4", features = ["extension-module", "anyhow", "abi3-py38"]}
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"

clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
log = "0.4.25"

piledown = {path = "./crates/piledown"}

[workspace.metadata.crane]
name = "my-workspace"
# [profile.release]
# opt-level = 3
# strip = "symbols"
# codegen-units = 1
# lto = true
# panic = "abort"
