[workspace]
members = ["crates/pldn", "crates/piledown", "crates/pyledown"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.98"
arrow = { version = "54.3.1", features = ["pyarrow"] }
clap = { version = "4.5.41", features = ["derive"]}
csv = "1.3.1"
fnv = "1.0.7"
futures = "0.3.31"
indexmap = { version = "2.10.0", features = ["serde"] }
noodles = { version = "0.87.0", features = ["core", "sam", "bam", "async"] }
parquet = "54.3.1"
pyo3 = { version = "0.23.5", features = ["extension-module", "anyhow", "abi3-py38"]}
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros"] }

clap-verbosity-flag = "3.0.3"
env_logger = "0.11.8"
log = "0.4.27"

piledown = {path = "./crates/piledown"}

[workspace.dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[workspace.metadata.crane]
name = "my-workspace"
# [profile.release]
# opt-level = 3
# strip = "symbols"
# codegen-units = 1
# lto = true
# panic = "abort"
