[workspace]
members = ["crates/pldn", "crates/piledown", "crates/pyledown", "crates/piledownR/src/rust"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.102"
arrow = { version = "58.0.0" }
clap = { version = "4.6.0", features = ["derive"]}
csv = "1.4.0"
csv-async = { version = "1", features = ["tokio", "with_serde"] }
fnv = "1.0.7"
futures = "0.3.32"
indexmap = { version = "2.13.0", features = ["serde"] }
noodles = { version = "0.108.0", features = ["core", "sam", "bam", "bgzf", "async"] }
parquet = { version = "58.0.0", features = ["async"] }
pyo3 = { version = "0.28.2", features = ["extension-module", "anyhow", "abi3-py310"]}
extendr-api = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros", "io-std", "io-util"] }

clap-verbosity-flag = "3.0.4"
env_logger = "0.11.9"
log = "0.4.29"

piledown = {path = "./crates/piledown"}
