[package]
name = "piledown"
version = "0.1.0"
edition = "2021"

[dependencies]
libpiledown = {path = "../libpiledown", features = [ "cli" ]}
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
csv = "1.3.1"
env_logger = "0.11.6"
log = "0.4.25"
noodles = { version = "0.87.0", features = ["core", "sam", "bam"] }
serde = { version = "1.0.217", features = ["derive"] }
