[package]
name = "piledown"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.95"
arrow = { version = "54.0.0", features = ["pyarrow"] }
clap = { version = "4.5.26", features = ["derive"], optional = true}
csv = "1.3.1"
fnv = "1.0.7"
futures = "0.3.31"
indexmap = { version = "2.7.1", features = ["serde"] }
noodles = { version = "0.87.0", features = ["core", "sam", "bam"] }
parquet = "54.0.0"
pyo3 = { version = "0.23.4", features = ["extension-module", "anyhow", "abi3-py38"], optional = true}
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"

[features]
cli = ["dep:clap"]
python = ["dep:pyo3"]
