[package]
name = "piledown"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
arrow.workspace = true
clap = {workspace = true, optional = true}
csv.workspace = true
fnv.workspace = true
futures = { workspace = true, optional = true }
indexmap.workspace = true
log.workspace = true
noodles.workspace = true
parquet.workspace = true
pyo3 = {workspace = true, optional = true}
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio = { workspace = true, optional = true }

[dev-dependencies]
bytes = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { workspace = true }

[features]
python = ["dep:pyo3"]
cli = ["dep:clap"]
async = ["dep:tokio", "dep:futures"]

[[bench]]
name = "coverage"
harness = false
