[package]
name = "pldn"
version = "0.1.0"
edition = "2021"

[dependencies]
piledown = {path = "../piledown", features = [ "cli" ]}
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
csv.workspace = true
env_logger.workspace = true
log.workspace = true
noodles.workspace = true
serde.workspace = true
