[package]
name = "pldn"
version.workspace = true
edition.workspace = true

[dependencies]
piledown = {path = "../piledown", features = [ "cli", "async" ]}
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
env_logger.workspace = true
log.workspace = true
noodles.workspace = true
parquet.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
