[package]
name = "pyledown"
version.workspace = true
edition.workspace = true

[dependencies]
arrow = { workspace = true, features = ["pyarrow"] }
piledown = {workspace = true, features = ["python", "async"]}
noodles.workspace = true
anyhow.workspace = true
futures.workspace = true
pyo3.workspace = true

[dev-dependencies]
tempfile = "3"
