[package]
name = "piledownR"
publish = false
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
piledown = { workspace = true, features = ["async"] }
extendr-api.workspace = true
arrow = { workspace = true, features = ["ffi"] }
noodles.workspace = true
anyhow.workspace = true
futures.workspace = true
